dev/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: image-repository
  name: image-repository
  namespace: lab-test
spec:
  rules:
  - host: registry.tmdash2.lab.shocn.lan
    http:
      paths:
      - backend:
          service:
            name: image-repository
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - registry.tmdash2.lab.shocn.lan
    secretName: image-repository-tls-ingress
